# mp-audio-stream

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  ffigen.sh  pubspec.yaml  shell.nix
android/: build.gradle
example/lib/: main.dart  main_nogui.dart
ios/: mp_audio_stream.podspec
lib/: mp_audio_stream.dart
lib/src/: mp_audio_stream_mastream.dart  mp_audio_stream_web.dart
macos/: mp_audio_stream.podspec
src/: CMakeLists.txt  mp_audio_stream.cc  mp_audio_stream.h  test.cc  user_buffer.cpp  user_buffer.h  utils.cc  utils.h  utils.hpp  values.hpp
test/: CMakeLists.txt  main.cc  mic.cc
